--- a/students.html
+++ b/students.html
@@ -18,7 +18,7 @@
 </header>
   <nav>
     <ul>
-      <li><a href="index.html">Home</index></a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="students.html">Our Students</a></li>
       <li><a href="updates.html">News Feed</a></li>
     </ul>
@@ -26,32 +26,32 @@
   <main class="students">
     <h2>Get To Know Our New Hires</h2>
     <div id="grid-1">
-      <article class="pic-1">
-       <img src="images/newhires/Carol.jpg" alt="Caroline"></a>
+      <div class="pic-1">
+       <img src="images/newhires/Carol.jpg" alt="Caroline">
         <p>Caroline Diniz Gonçalves Mota <br><br>"I am from São Paulo, Brazil. I'm an interdisciplinary studies major 
           (Spanish-Music), I love to play the cello and my plans are working 
           with translation and private cello lessons for kids."
           </p>
-      </article>
-      <article class="pic-2">
+      </div>
+      <div class="pic-2">
         <img src="images/newhires/Chris.jpg" alt="Chris">
         <p>Chris Cuevas <br><br>"I’m from Florida, I love the beach and playing guitar. I plan on 
           working for my mission president’s car dealership and 
           owning my own later on."</p>
-      </article>
-      <article class="pic-3">
+      </div>
+      <div class="pic-3">
         <img src="images/newhires/Bryce.jpg" alt="Bryce">
         <p>Bryce Blignaut <br><br>"I’m from South Africa. I love riding motorcycles and my major is
           industrial psychology."</p>
-      </article>
-      <article class="pic-9">
+      </div>
+      <div class="pic-9">
         <img src="images/newhires/Kusum.jpg" alt="Kusum">
         <p>Kusum Dhakal <br><br>"I am Kusum and I am from Nepal. It’s been two years that I am
           here in BYUI. My major is Food Science and I want to be a food 
           scientist. I love cooking and I can make different dishes, 
           mostly authentic Nepali food."</p>
-      </article>
-      <article class="pic-5">
+      </div>
+      <div class="pic-5">
         <img src="images/newhires/Suzzane.jpg" alt="Suzzane">
         <p>Suzanne Magalhaes<br><br>"Hi, I’m from Norway 🇳🇴 I’ve been living in the last 9 years in 
           Switzerland 🇨🇭. A couple of months ago my family and I moved 
@@ -59,8 +59,8 @@
           here in a Rexburg studying marriage and family. I love to sing, 
           listen to audiobooks (fiction/fantasy. Harry Potter is still a 
           favorite), play board games, going to church and taco."</p>
-      </article>
-      <article class="pic-6">
+      </div>
+      <div class="pic-6">
         <img src="images/newhires/cassidy.jpg" alt="Cassidy">
         <p>Cassidy Zapalac<br><br>"I am from Southern California, I love to hang out with Wesley my 
           service dog. I enjoy camping and eating ice cream. I plan to 
@@ -68,8 +68,8 @@
           day. If it happens, who knows. I want the library to remember 
           how nice it is to be in my company. Also that I am the world's 
           worst speller."</p>
-      </article>
-      <article class="pic-7">
+      </div>
+      <div class="pic-7">
           <img src="images/newhires/MJ.jpg" alt="Newton">
           <p>MJ Newton<br><br>"I was born and raised in Illinois, but while on my mission my
             family moved to Arizona. I love to spend time with my husband, 
@@ -77,16 +77,16 @@
             major is Elementary Education with a minor in TESOL. My future 
             plans are to eventually start a family and finish my degree. After 
             that, we shall see! I love getting to know people and smiling."</p>
-      </article>
-      <article class="pic-8">
+      </div>
+      <div class="pic-8">
           <img src="images/newhires/ashlyn.jpg" alt="Ashlyn">
           <p>Ashlyn Worthington<br><br>"I’m from Billings, Montana. I like to run and write calligraphy. My 
             current major is Elementary Education, but isn’t set in stone. I plan
             to hopefully teach elementary school, planning on a mission after 
             my second semester."
           </p>
-      </article>
-      <article class="pic-4">
+      </div>
+      <div class="pic-4">
           <img src="images/newhires/Anderson.jpg" alt="Anderson">
           <p>Anderson Gbalo<br><br>"I am Anderson Gbalo. I come from Côte d’Ivoire and my major is 
             Accounting. I love to play soccer and spend time with friends. For 
@@ -96,17 +96,17 @@
             of a lack of money. I will love the library to remember that I am a 
             kind person always available to serve his brothers and sisters 
             and hard workers who love everybody."</p>
-      </article>
-      <article class="pic-10">
+      </div>
+      <div class="pic-10">
           <img src="images/newhires/Lily.jpg" alt="Lily">
           <p>Lily Liu <br><br>"I am from China. My favorite things to do are traveling and 
             cooking! I am doing pre-med and planning to be a PA. I want you 
             to remember that I work hard and I have a positive attitude."</p>
-      </article>
+      </div>
     </div>
     <h2>Check Out Our Graduating Students</h2>
     <div id="grid-2">
-      <article class="pic-Grad1">
+      <div class="pic-Grad1">
         <img src="images/graduating/Kiyle.jpg" alt="Kyle">
         <p>Kyle Autrey 
           <br><br>"I'm from Fort Worth, Texas, I enjoy being outside: hiking, 
@@ -117,12 +117,10 @@
           skills. I'm also grateful for everyone helping out and being so kind to my family 
           these last few semesters especially while Dani was at work. It's been a huge blessing for us. 
           Please keep in touch!"<br><br>
-          <a href="https://www.facebook.com/autrey7" target="_blank"><img src="images/logos/facebook.jpg" 
-            id="social-media-logo" alt="facebook"></a> 
-          <a href="https://www.linkedin.com/in/kyle-autrey/" target="_blank"><img src="images/logos/Linkdin.jpg" 
-            id="social-media-logo" alt="Linkdin"></a></p>          
-      </article>
-      <article class="pic-Grad2">
+          <a href="https://www.facebook.com/autrey7" target="_blank"><img src="images/logos/facebook.jpg"  alt="facebook"></a> 
+          <a href="https://www.linkedin.com/in/kyle-autrey/" target="_blank"><img src="images/logos/Linkdin.jpg" alt="Linkdin"></a></p>          
+      </div>
+      <div class="pic-Grad2">
         <img src="images/graduating/Julius.jpg" alt="Julius">
         <p>Julius Ng'ambi 
           <br><br>"From Zambia, I like traveling, all kinds of outdoor sports 
@@ -132,12 +130,10 @@
           business/cooperate law to either work for the U.S government or 
           freelance in Europe and Africa. I want the library to remember me 
           for many different reasons as I will remember it."<br><br>
-          <a href="https://www.facebook.com/julius.jay.39" target="_blank"><img src="images/logos/facebook.jpg" 
-            id="social-media-logo" alt="facebook"></a> 
-          <a href="https://www.linkedin.com/in/julius-ngambi/" target="_blank"><img src="images/logos/Linkdin.jpg" 
-            id="social-media-logo" alt="Linkdin"></a></p>
-      </article>
-      <article class="pic-Grad3">
+          <a href="https://www.facebook.com/julius.jay.39" target="_blank"><img src="images/logos/facebook.jpg" alt="facebook"></a> 
+          <a href="https://www.linkedin.com/in/julius-ngambi/" target="_blank"><img src="images/logos/Linkdin.jpg" alt="Linkdin"></a></p>
+      </div>
+      <div class="pic-Grad3">
         <img src="images/graduating/Milla.jpg" alt="Mila">
         <p>Mila Argueta <br><br>"I am from Iowa. My parents are from Arizona and Guatemala. I 
           love ice cream. I will live and die for ice cream. I am an English 
@@ -145,24 +141,20 @@
           always thinking and analyzing. I love soccer, playing sports for 
           fun, being active, eating, watching movies, and reading real 
           books. I want to be remembered for my sass and awkwardness."<br><br>
-          <a href="https://www.facebook.com/mila.argueta" target="_blank"><img src="images/logos/facebook.jpg" 
-            id="social-media-logo" alt="facebook"></a> 
-          <a href="https://www.linkedin.com/in/mila-argueta-ab4443145/" target="_blank"><img src="images/logos/Linkdin.jpg" 
-            id="social-media-logo" alt="Linkdin"></a></p>
-      </article>
-      <article class="pic-Grad4">
+          <a href="https://www.facebook.com/mila.argueta" target="_blank"><img src="images/logos/facebook.jpg" alt="facebook"></a> 
+          <a href="https://www.linkedin.com/in/mila-argueta-ab4443145/" target="_blank"><img src="images/logos/Linkdin.jpg" alt="Linkdin"></a></p>
+        </div>
+      <div class="pic-Grad4">
         <img src="images/graduating/Makenzie.jpg" alt="McKenzie">
         <p>McKenzie Hunsaker<br><br>"I am from Filer Idaho which is near Twin Falls. 
           I am studying elementary education and LOVE it! Seriously. It is the best.
           I am going to be moving to Utah in January so that is awesome. 
           Very excited for something new. I also love working at the library. 
           It has been one of my very favorite things about college!"<br><br>
-          <a href="https://www.facebook.com/mckenzie.hunsaker" target="_blank"><img src="images/logos/facebook.jpg" 
-            id="social-media-logo" alt="facebook"></a> 
-          <a href="https://www.linkedin.com/in/mckenzie-hunsaker/" target="_blank"><img src="images/logos/Linkdin.jpg" 
-            id="social-media-logo" alt="Linkdin"></a></p>
-      </article>  
-      <article class="pic-Grad5">
+          <a href="https://www.facebook.com/mckenzie.hunsaker" target="_blank"><img src="images/logos/facebook.jpg" alt="facebook"></a> 
+          <a href="https://www.linkedin.com/in/mckenzie-hunsaker/" target="_blank"><img src="images/logos/Linkdin.jpg" alt="Linkdin"></a></p>
+      </div>  
+      <div class="pic-Grad5">
         <img src="images/graduating/Emma.jpg" alt="Emma">
         <p>Emma  St. John<br><br>I am from Blackfoot, Idaho. I have worked at the library 
           for 2 years and loved every semester! I will be graduating with a degree in 
@@ -170,26 +162,24 @@
           in Accounting Fall of 2020. After completing my masters 
           I will be starting as a full time Audit Associate with 
           the firm Ernst & Young in Houston, Texas.<br><br>
-          <a href="https://www.facebook.com/emma.stjohn.98" target="_blank"><img src="images/logos/facebook.jpg" 
-            id="social-media-logo" alt="facebook"></a> 
-          <a href="https://www.linkedin.com/in/emma-st-john-9b7495128/" target="_blank"><img src="images/logos/Linkdin.jpg" 
-            id="social-media-logo" alt="Linkdin"></a></p>
-      </article>
-      <article class="pic-Grad6">
+          <a href="https://www.facebook.com/emma.stjohn.98" target="_blank"><img src="images/logos/facebook.jpg" alt="facebook"></a> 
+          <a href="https://www.linkedin.com/in/emma-st-john-9b7495128/" target="_blank"><img src="images/logos/Linkdin.jpg" alt="Linkdin"></a></p>
+      </div>
+      <div class="pic-Grad6">
         <img src="images/graduating/Montana.jpg" alt="Montana">
         <p>Montana Manapat<br><br>"I am a New Jersey native, with roots in Philadelphia and South Jersey. 
           My degree is in art education. With my degree I'd like to teach studio art classes and work in 
           art museums. Art is very important to me. I have worked at the library for about 3 and a half years. 
           Working here has been a great privilege and experience. 
           I have had the pleasure of working with so many great people. Thank you guys for all you do."<br><br>
-          <a href="https://www.instagram.com/doodle_spooks/" target="_blank"><img src="images/logos/Instagram.png" 
-            id="social-media-logo" alt="Instagram"></a></p>
-      </article> 
-  </main>
+          <a href="https://www.instagram.com/doodle_spooks/" target="_blank"><img src="images/logos/Instagram.png" alt="Instagram"></a></p>
+      </div>
+    </div>
   <footer>
     <p>
       This web page is not affiliated or supported  by any institution <br/>&copy; 2019 Circulation Team
     </p>
   </footer>
+  </main>
 </body>
 </html>
