--- a/updates.html
+++ b/updates.html
@@ -23,9 +23,9 @@
     </nav>
   <main id="news-feed">
     <h2>Times of Preparation</h2>
-    <article>
+    <div>
       <div class="guest-messager">
-      <img src="images/logos/Green_Holly_1[1].jpg" alt="Holy Green">
+      <img src="images/logos/Green.jpg" alt="Holy Green">
       <p>Holly Green
       <br>Laying a Foundation
       <br>"I developed skills as an employee that I still use today."</p>
@@ -46,7 +46,7 @@
         <br>became the Religion librarian based on my past education and work experience. You 
         <br>never know how what you do now will directly impact your future.
         <br><br><a href="https://www.linkedin.com/in/hollyvgreen/" target="_blank"><img src="images/logos/Linkdin.jpg" id="social-media-logo" alt="Linkdin"></a></p>
-    </article>
+      </div>
   </main>
   <footer>
       <p>
